@@ -21,6 +21,8 @@ next version - not released yet
 ! Ticket #4436, DVB: Improve compatibility with certain tuners
 ! Ticket #4933, ASS/SSA subtitles: Fix a crash for elements with no horizontal border but a vertical one
 ! Ticket #4937, Prevent showing black bars when window size after scale exceed current work area
+! Ticket #4938, Fix resetting the settings from the "Options" dialog: some settings were (randomly) not
+  restored to their default value
 
 
 1.7.7 - 05 October 2014
